update to English

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
 								style="color: #d80075;">Loan Rate</span> and <span style="color: #d80075;">Loan
 								Amount</span></h2>
 					</div>
-					<div class="copy">© 2021 Loan～齁哩</div>
+					<div class="copy">© 2021 Loan～HoLi</div>
 				</div>
 				<!-- /content-left-wrapper -->
 			</div>
@@ -92,26 +92,26 @@
 								<h2 class="section_title">Let Us Know About You～</h2>
 								<h3 class="main_question">Personal Information</h3>
 								<div class="form-group add_top_30">
-									<label for="name">姓名</label>
+									<label for="name">Name</label>
 									<input type="text" name="name" id="name" class="form-control required"
 										autocomplete="off" onchange="getVals(this, 'name_field');">
 								</div>
 								<div class="form-group">
-									<label for="email">Email信箱</label>
+									<label for="email">Email Address</label>
 									<input type="email" name="email" id="email" class="form-control" autocomplete="off"
 										onchange="getVals(this, 'email_field');">
 								</div>
 								<div class="form-group">
-									<label for="phone">手機</label>
+									<label for="phone">Mobile</label>
 									<input type="text" name="phone" id="phone" class="form-control" autocomplete="off">
 								</div>
-								<label>性別</label>
+								<label>Gender</label>
 								<div class="form-group radio_input">
-									<label class="container_radio mr-3">男
+									<label class="container_radio mr-3">Male
 										<input type="radio" name="gender" value="Male" class="required">
 										<span class="checkmark"></span>
 									</label>
-									<label class="container_radio">女
+									<label class="container_radio">Female
 										<input type="radio" name="gender" value="Female" class="required">
 										<span class="checkmark"></span>
 									</label>
@@ -126,7 +126,7 @@
 								<h2 class="section_title">First of All...</h2>
 								<h3 class="main_question">Tell Us Some Backgrounds！</h3>
 								<div class="form-group add_bottom_30">
-									<label> 貸款目的</label>
+									<label> Loan purpose 貸款目的</label>
 									<label for="purpose3">Choose a purpose</label>
 									<div class="styled-select">
 										<select class="form-control required" id="purpose3" name="purpose">
@@ -149,17 +149,17 @@
 									</div>
 								</div>
 								<div class="form-group add_bottom_30">
-									<label>目前已抵押帳戶數量?</label>
+									<label>How many accounts are currently mortgaged? </label>
 									<div class="form-group">
-										<label for="mort_acc">Number of Mortgaged Accounts</label>
+										<label for="mort_acc">Number of Mortgaged Accounts. 目前已抵押帳戶數量</label>
 										<input type="text" name="mort_acc" id="mort_acc" class="form-control required"
 											autocomplete="off">
 									</div>
 								</div>
 								<div class="form-group add_bottom_30">
-									<label>曾因信用卡延遲繳款造成拒絕交易次數?</label>
+									<label>How many times have you ever been denied a transaction due to late payment on your credit card?</label>
 									<div class="form-group">
-										<label for="pub_rec">Number of Transactions Refused</label>
+										<label for="pub_rec">Number of Transactions Refused. 曾因信用卡延遲繳款造成拒絕交易次數</label>
 										<input type="text" name="pub_rec" id="pub_rec" class="form-control required"
 											autocomplete="off">
 									</div>
@@ -172,25 +172,25 @@
 								<h2 class="section_title">You're almost finish...</h2>
 								<h3 class="main_question"></h3>
 								<div class="form-group add_bottom_30">
-									<label>曾欠下債務的最高總額? (in USD)</label>
+									<label>Highest total debt ever owed? (in USD)</label>
 									<div class="form-group">
-										<label for="tot_coll_amt">Highest Debt</label>
+										<label for="tot_coll_amt">Highest Debt. 曾欠下債務的最高總額?</label>
 										<input type="text" name="tot_coll_amt" id="tot_coll_amt"
 											class="form-control required" autocomplete="off">
 									</div>
 								</div>
 								<div class="form-group add_bottom_30">
-									<label>信用卡總額度? (in USD)</label>
+									<label>Total credit card limit? (in USD)</label>
 									<div class="form-group">
-										<label for="bc_open_to_buy">Amount</label>
+										<label for="bc_open_to_buy">Total Amount. 信用卡總額度?</label>
 										<input type="text" name="bc_open_to_buy" id="bc_open_to_buy"
 											class="form-control required" autocomplete="off">
 									</div>
 								</div>
 								<div class="form-group add_bottom_30">
-									<label>過去一年開戶數量?</label>
+									<label>How many accounts were opened in the past year?</label>
 									<div class="form-group">
-										<label for="num_tl_op_past_12m">Opened Accounts</label>
+										<label for="num_tl_op_past_12m">Opened Accounts. 過去一年開戶數量?</label>
 										<input type="text" name="num_tl_op_past_12m" id="num_tl_op_past_12m"
 											class="form-control required" autocomplete="off">
 									</div>
@@ -201,7 +201,7 @@
 							<!-- /Start Branch ============================== -->
 							<div class="step" data-state="branchtype">
 								<h2 class="section_title">Loan Term</h2>
-								<h3 class="main_question">預計的貸款期數?</h3>
+								<h3 class="main_question">Expected loan period? 預計的貸款期數?</h3>
 								<div class="form-group">
 									<label class="container_radio version_2">36 Months
 										<input type="radio" name="term" value="3" class="required">
@@ -221,26 +221,26 @@
 									<h2 class="section_title">Loan Availability</h2>
 									<h3 class="main_question">Additional info about "Loan" availability</h3>
 									<div class="form-group add_bottom_30">
-										<label>年收入? (in USD)</label>
+										<label>Annual income? (in USD)</label>
 										<div class="form-group">
-											<label for="income">Annual income</label>
+											<label for="income">Annual income. 年收入</label>
 											<input type="text" name="annual_inc" id="income"
 												class="form-control required" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group add_bottom_30">
-										<label>預計借貸多少錢? (in USD)</label>
+										<label>How much do you expect to loan? (in USD)</label>
 										<!-- <label for="start_availability_full_time">Choose your availability</label> -->
 										<div class="form-group">
-											<label for="loan_amnt">Loan amount</label>
+											<label for="loan_amnt">Loan amount. 預計借貸多少錢?</label>
 											<input type="text" name="loan_amnt" id="loan_amnt"
 												class="form-control required" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group add_bottom_30">
-										<label>預計每個月償還的貸款金額? (in USD)</label>
+										<label>Estimated monthly loan repayment amount? (in USD)</label>
 										<div class="form-group">
-											<label for="installment">Pay amount</label>
+											<label for="installment">Pay amount. 預計每個月償還的貸款金額?</label>
 											<input type="text" name="installment" id="installment"
 												class="form-control required" autocomplete="off">
 										</div>
@@ -255,25 +255,25 @@
 									<h2 class="section_title">Loan Availability</h2>
 									<h3 class="main_question">Additional info about "Loan" availability</h3>
 									<div class="form-group add_bottom_30">
-										<label>年收入? (in USD)</label>
+										<label>Annual income (in USD)</label>
 										<div class="form-group">
-											<label for="annual_inc">Annual income</label>
+											<label for="annual_inc">Annual income. 年收入</label>
 											<input type="text" name="annual_inc" id="annual_inc"
 												class="form-control required" autocomplete="off">
 										</div>
 									</div>
 									<div class="form-group add_bottom_30">
-										<label>預計借貸多少錢? (in USD)</label>
+										<label>How much do you expect to loan? (in USD)</label>
 										<div class="form-group">
-											<label for="loan_amnt">Loan amount</label>
+											<label for="loan_amnt">Loan amount. 預計借貸多少錢?</label>
 											<input type="text" name="loan_amnt" id="loan_amnt"
 												class="form-control required" autocomplete="off">
 										</div>
 									</div>
-									<label class="custom">預計每個月償還的貸款金額? (in USD)</label>
+									<label class="custom">Estimated monthly loan repayment amount? (in USD)</label>
 									<div class="form-group radio_input">
 										<div class="form-group">
-											<label for="installment">Pay amount</label>
+											<label for="installment">Pay amount. 預計每個月償還的貸款金額?</label>
 											<input type="text" name="installment" id="installment"
 												class="form-control required" autocomplete="off">
 										</div>
